--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 /target/
 !.mvn/wrapper/maven-wrapper.jar
+src/main/resources/static/
 
 ### STS ###
 .apt_generated
@@ -27,3 +28,5 @@ HELP.md
 
 ### VS Code ###
 .vscode/
+
+
