--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -32,6 +32,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-terser": "^1.1.7",
     "gulp-webserver": "^0.9.1",
+    "http-proxy-middleware": "^0.19.1",
     "jshint": "^2.9.7",
     "jshint-stylish": "^2.2.1",
     "merge-stream": "^1.0.1",
