--- a/src/main/frontend/bower.json
+++ b/src/main/frontend/bower.json
@@ -2,17 +2,27 @@
   "name": "hour-reporting-system",
   "description": "Hour reporting system.",
   "main": "index.js",
-  "authors": ["wkurek"],
+  "authors": [
+    "wkurek"
+  ],
   "license": "ISC",
   "homepage": "https://github.com/parvex/Hour-reporting-system",
-  "ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
     "angular": "^1.7.6",
     "angular-ui-router": "^1.0.22",
     "angular-ui-calendar": "^1.0.2",
-    "angular-ui-select": "^0.19.8"
+    "angular-ui-select": "^0.19.8",
+    "jquery": "^3.3.1"
   },
   "resolutions": {
-    "angular": "^1.7.6"
+    "angular": "^1.7.6",
+    "jquery": "~2.1.4"
   }
 }
