--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -26,7 +26,9 @@
     "gulp-less": "^4.0.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-main-bower-files": "^1.7.0",
+    "gulp-ng-annotate": "^2.1.0",
     "gulp-ng-html2js": "^0.2.2",
+    "gulp-order": "^1.2.0",
     "gulp-rev": "^9.0.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
@@ -37,5 +39,6 @@
     "jshint-stylish": "^2.2.1",
     "merge-stream": "^1.0.1",
     "terser": "^3.17.0"
-  }
+  },
+  "dependencies": {}
 }
