--- a/src/main/frontend/bower.json
+++ b/src/main/frontend/bower.json
@@ -20,7 +20,8 @@
     "angular-ui-calendar": "^1.0.2",
     "angular-ui-select": "^0.19.8",
     "jquery": "^3.3.1",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "ng-table-bundle": "^4.0.0"
   },
   "resolutions": {
     "angular": "^1.7.6",
