-rest of db implementation - h2 config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,2 @@
-# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://hour-reporting-db.mysql.database.azure.com:3306/reportingDB?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=student@hour-reporting-db
-spring.datasource.password=1qaz@WSX
-
-# Hibernate Properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+# Enabling H2 Console
+spring.h2.console.enabled=true
