--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 
+#perfix for everything...
+server.servlet.context-path = /api
+
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://eiti.database.windows.net:1433;database=HourReportingDB;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.username=student
