--- a/src/main/frontend/bower.json
+++ b/src/main/frontend/bower.json
@@ -22,7 +22,8 @@
     "jquery": "^3.3.1",
     "ng-table-bundle": "^4.0.0",
     "angular-sanitize": "^1.7.8",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "angular-cookies": "^1.7.8"
   },
   "resolutions": {
     "angular": "^1.7.6",
