--- a/src/main/frontend/bower.json
+++ b/src/main/frontend/bower.json
@@ -38,6 +38,7 @@
   },
   "resolutions": {
     "jquery": "~2.1.4",
-    "angular": "~1.7.8"
+    "angular": "~1.7.8",
+    "angular-bootstrap": "~1.3.3"
   }
 }
