--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,7 @@ after_success:
 script:
  - mvn test
 
- deploy:
-  provider: packagecloud
-  repository: https://packagecloud.io/MatKravi/pik-repository
-  username: MatKravi
-  token: 9db3ae166e953d55c8c1e53b0066e2feb556f6cff7c21e12
-  dist: ubuntu/disco
+deploy:
+ provider: script
+ script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+ skip_cleanup: true
