--- a/pom.xml
+++ b/pom.xml
@@ -193,13 +193,24 @@
         </profile>
     </profiles>
 
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>packagecloud-MatKravi</id>-->
+<!--            <url>packagecloud+https://packagecloud.io/MatKravi/pik-repository</url>-->
+<!--        </repository>-->
+<!--        <snapshotRepository>-->
+<!--            <id>packagecloud-MatKravi</id>-->
+<!--            <url>packagecloud+https://packagecloud.io/MatKravi/pik-repository</url>-->
+<!--        </snapshotRepository>-->
+<!--    </distributionManagement>-->
+
     <distributionManagement>
         <repository>
-            <id>packagecloud-MatKravi</id>
+            <id>packagecloud-travis</id>
             <url>packagecloud+https://packagecloud.io/MatKravi/pik-repository</url>
         </repository>
         <snapshotRepository>
-            <id>packagecloud-MatKravi</id>
+            <id>packagecloud-travis</id>
             <url>packagecloud+https://packagecloud.io/MatKravi/pik-repository</url>
         </snapshotRepository>
     </distributionManagement>
