--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ after_success:
 deploy:
  provider: script
  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+ on:
+  all_branches: true
 
 script:
  - mvn test
