--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ jdk:
 
 before_install:
  - chmod +x mvnw
+ - gem install package_cloud
 
 after_success:
  - bash <(curl -s https://codecov.io/bash)
  - cp .travis.settings.xml $HOME/.m2/settings.xml
- - mvn deploy
+ - package_cloud yawn MatKravi/pik-repository app-0.0.1-SNAPSHOT.jar
+# - mvn deploy
 
 #deploy:
 # provider: script
