--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 after_success:
  - bash <(curl -s https://codecov.io/bash)
  - cp .travis.settings.xml $HOME/.m2/settings.xml
- - package_cloud yank MatKravi/pik-repository/java/com.pik app-0.0.1-SNAPSHOT.jar
+ - package_cloud yank MatKravi/pik-repository/java app-0.0.1-SNAPSHOT.jar
 # - mvn deploy
 
 #deploy:
