--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,7 @@ after_success:
  - bash <(curl -s https://codecov.io/bash)
  - cp .travis.settings.xml $HOME/.m2/settings.xml
  - package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar
-# - mvn deploy
-
-#deploy:
-# provider: script
-# script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
-# on:
-#  all_branches: true
+ - mvn deploy
 
 script:
  - mvn test
