--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ after_success:
 
 script:
  - mvn test
- - cp .travis.settings.xml $HOME/.m2/settings.xml
- - package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar
- - mvn deploy
+ - "cp .travis.settings.xml $HOME/.m2/settings.xml && package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
 #deploy:
 #  provider: script
 #  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
