--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jdk:
 before_install:
  - chmod +x mvnw
  - gem install package_cloud
+ - cp .travis.settings.xml $HOME/.m2/settings.xml
 
 after_success:
  - bash <(curl -s https://codecov.io/bash)
@@ -15,7 +16,8 @@ after_success:
 
 script:
  - mvn test
- - "cp .travis.settings.xml $HOME/.m2/settings.xml && package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
+ - "package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
+
 #deploy:
 #  provider: script
 #  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
