--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,11 @@ jdk:
 before_install:
  - chmod +x mvnw
  - gem install package_cloud
+ - cp .travis.settings.xml $HOME/.m2/settings.xml
 
 after_success:
  - bash <(curl -s https://codecov.io/bash)
 
- deploy:
-   provider: script
-   script: "cp .travis.settings.xml $HOME/.m2/settings.xml && package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
-
 script:
  - mvn test
-
-#dddddd
+ - "package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
