--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,15 @@ before_install:
  - chmod +x mvnw
  - gem install package_cloud
  - cp .travis.settings.xml $HOME/.m2/settings.xml
- - package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar
 
 after_success:
  - bash <(curl -s https://codecov.io/bash)
- - mvn deploy
+ #- mvn deploy
 
 script:
  - mvn test
 # - "package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
 
+deploy:
+ provider: script
+ script: "cp .travis.settings.xml $HOME/.m2/settings.xml && package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
