--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ jdk:
 before_install:
  - chmod +x mvnw
  - gem install package_cloud
- - cp .travis.settings.xml $HOME/.m2/settings.xml
 
 after_success:
  - bash <(curl -s https://codecov.io/bash)
@@ -20,6 +19,6 @@ script:
 
 deploy:
  provider: script
- script: "cp .travis.settings.xml $HOME/.m2/settings.xml && package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
+ script: "cp .travis.settings.xml && mvn deploy"
  on:
   all_branches: true
