--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jdk:
 before_install:
  - chmod +x mvnw
  - gem install package_cloud
+ - cp .travis.settings.xml $HOME/.m2/settings.xml
 
 after_success:
  - bash <(curl -s https://codecov.io/bash)
@@ -19,6 +20,6 @@ script:
 
 deploy:
  provider: script
- script: "cp .travis.settings.xml && mvn deploy"
+ script: "mvn deploy"
  on:
   all_branches: true
