--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ script:
  - mvn test
 # - "package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
 
+before_deploy:
+ -package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar
+
 deploy:
  provider: script
  script: "mvn deploy"
