--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,15 @@ before_install:
 
 after_success:
  - bash <(curl -s https://codecov.io/bash)
+ #- mvn deploy
 
 script:
  - mvn test
-# - "package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar && mvn deploy"
+
+#before_deploy:
+# - package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar
+
+deploy:
+ provider: script
+ script: "mvn deploy"
+ skip_cleanup: true
