--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 #before_deploy:
 # - package_cloud yank MatKravi/pik-repository/java com.pik/app-0.0.1-SNAPSHOT.jar
 
-deploy:
- provider: script
- script: "mvn deploy"
- skip_cleanup: true
+#deploy:
+# provider: script
+# script: "mvn deploy"
+# skip_cleanup: true
